@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v9r3-pre18
+  {
+    Modules = LHCbDIRAC:v9r3-pre18, LHCbWebDIRAC:v4r5p2
+    Depends = DIRAC:v6r21-pre8
+    LcgVer = v14r8
+  }
+
   v9r3-pre17
   {
     Modules = LHCbDIRAC:v9r3-pre17, LHCbWebDIRAC:v4r5p2
